Fixed spells spacing and visibility issue

--- a/spells.css
+++ b/spells.css
@@ -56,8 +56,9 @@ header p{
     border:1px solid rgba(255,255,255,.25);
     text-decoration:none;
     color:inherit;
-    overflow:hidden;
+    overflow:visible;
     transition:.8s;
+    margin: auto;
 }
 
 .spell-card:hover{
